# Robotics_intro

./: .rosinstall  README.md  setup.bash  setup.sh  setup.zsh
dynamic_introspection/: .gitignore  .project  CHANGELOG.rst  CMakeLists.txt  TODO  package.xml
dynamic_introspection/include/dynamic_introspection/: dynamic_introspection.h  dynamic_introspection_utils.h  introspection_online_utils.h
dynamic_introspection/matlab/: dipsplay_variable_names.m  get_introspection_varible_index.m  read_introspection_bag.m  read_introspection_variable.m
dynamic_introspection/msg/: IntrospectionMsg.msg  MarkerParameter.msg
dynamic_introspection/scripts/: bag_introspection_bag_read.py  bag_introspection_bag_read_multiplot.py  bag_read.py  topic_introspection_bag_read_multiplot.py
dynamic_introspection/scripts/examples/: bag_read.py  bag_write.py
dynamic_introspection/src/: dynamic_introspection.cpp  dynamic_introspection_rosbag_recording_server.cpp  dynamic_introspection_utils.cpp  introspection_bag_analyzer.cpp  introspection_online_utils.cpp
dynamic_introspection/test/: CMakeLists.txt  dynamic_introspection_bag_example.cpp  dynamic_introspection_example.cpp  map_introspection_test.cpp  singleton_test.cpp  test_class_a.cpp  test_class_a.h  test_class_abstract.h  test_class_b.cpp  test_class_b.h  test_class_main.cpp  test_class_plugin_main.cpp  test_class_plugins.cpp  test_plugins.xml
dynamic_introspection/test/thread_safe/: thread_safe_test.cpp
gazebo_ros_pkgs/: .gitignore
hey5_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
pal_gazebo_plugins/include/pal_gazebo_plugins/: gazebo_attachment.h  gazebo_harness.h  gazebo_pal_hand.h  gazebo_ros_forcetorque.h  gazebo_underactuated_finger.h  gazebo_wifi_ap.h  gazebo_world_odometry.h
pal_gazebo_plugins/src/: gazebo_attachment.cpp  gazebo_harness.cpp  gazebo_pal_hand.cpp  gazebo_ros_forcetorque.cpp  gazebo_underactuated_finger.cpp  gazebo_wifi_ap.cpp  gazebo_world_odometry.cpp
pal_gripper/: README.md
pal_gripper/pal_gripper/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_gripper/pal_gripper_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_gripper/pal_gripper_controller_configuration/config/: current_limit_controllers.yaml  joint_trajectory_controllers.yaml  pids.yaml
pal_gripper/pal_gripper_controller_configuration/launch/: current_limit_controllers.launch  gripper_controller.launch
pal_gripper/pal_gripper_controller_configuration_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_gripper/pal_gripper_controller_configuration_gazebo/launch/: gripper_controller.launch
pal_gripper/pal_gripper_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_gripper/pal_gripper_gazebo/launch/: gripper_gazebo.launch  gripper_spawn.launch
pal_gripper/pal_parallel_gripper_wrapper/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_gripper/pal_parallel_gripper_wrapper/config/: parallel_gripper.yaml
pal_gripper/pal_parallel_gripper_wrapper/launch/: fake_one_joint_gripper.launch  grasping_service.launch  parallel_gripper.launch
pal_gripper/pal_parallel_gripper_wrapper/scripts/: gripper_grasping.py  parallel_gripper_fake.py
pal_gripper/pal_parallel_gripper_wrapper/test/: close.sh  open.sh
pal_hardware_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml  pal_hardware_gazebo_plugins.xml
pal_hardware_gazebo/include/pal_hardware_gazebo/: pal_hardware_gazebo.h
pal_hardware_gazebo/src/: pal_hardware_gazebo.cpp
pal_hardware_interfaces/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
pal_hardware_interfaces/include/pal_hardware_interfaces/: actuator_temperature_interface.h  current_limit_interface.h
pal_msgs/pal_behaviour_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_msgs/pal_behaviour_msgs/action/: BehaviourTask.action  Presentation.action
pal_msgs/pal_behaviour_msgs/msg/: BehaviourArgument.msg
pal_msgs/pal_behaviour_msgs/srv/: BehaviourEvent.srv
pal_navigation_sm/: CMakeLists.txt  package.xml  setup.py
pal_navigation_sm/launch/: map.launch  pal_navigation_sm.launch
pal_navigation_sm/scripts/: map_setup.py  navigation.sh  pal_navigation_main_sm.py
pal_python/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
pal_python/src/pal_python/: __init__.py  pal_common.py  pal_diagnostics.py  pal_environ.py  pal_hci.py  pal_launch.py  pal_path.py  pal_publishers.py  pal_rpc.py  pal_test_utils.py  pal_thread.py  ros_image_utils.py  shell_cmd.py
pal_python/test/: test_shell_cmd.py
robotics_project/: CMakeLists.txt  package.xml  setup.py
robotics_project/config/: pick_and_place_params.yaml  pick_motions.yaml
robotics_project/launch/: gazebo_project.launch  launch_project.launch
robotics_project/pal/: pose.yaml
robotics_project/pal/tiago_maps/config/: submap_0.pgm
robotics_project/scripts/demo/: grasps_server.py  manipulation_client.py  manipulation_server.py
robotics_project/scripts/state_machines/: sm_students.py
robotics_project/scripts/utils/: gazebo_models_hdl.py  poses_pub.py
robotics_project/srv/: MoveHead.srv
rviz_plugin_covariance/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml
rviz_plugin_covariance/src/: covariance_display.cpp  covariance_display.h  covariance_visual.cpp  covariance_visual.h  odometry_display.cpp  odometry_display.h
rviz_plugin_covariance/test/data/: odom_123.yaml  odom_321.yaml  odom_identity.yaml  odom_rx.yaml  odom_x.yaml  odom_y.yaml  odom_z.yaml
tf_lookup/: CMakeLists.txt  package.xml  setup.py
tf_lookup/action/: TfLookup.action  TfStream.action
tf_lookup/include/tf_lookup/: tf_lookup.h  tf_lookup_client.h  tf_lookup_client_impl.h  tf_sc_transform.h  tf_stream.h  tf_stream_client.h  tf_stream_client_impl.h  tf_stream_server.h
tf_lookup/msg/: Subscription.msg
tf_lookup/src/: tf_lookup.cpp  tf_lookup_main.cpp  tf_stream.cpp  tf_stream_server.cpp
tf_lookup/src/tf_lookup/: __init__.py  tf_common.py  tf_lookup_client.py  tf_stream_client.py
tf_lookup/srv/: lookupTransform.srv
(+473 files in other folders)
