<package>
  <name>pal_gazebo_plugins</name>
  <version>1.1.8</version>
  <description>
    Robot-independent Gazebo plugins used by PAL Robotics.
  </description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/pal-robotics/pal_gazebo_plugins</url>

  <author>Jose Capriles</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>pal_multirobot_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>pal_multirobot_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
