<?xml version="1.0"?>
<package>
  <name>pal_gripper</name>
  <version>1.0.0</version>
  <description>The pal_gripper package</description>

  <author email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</author>
  <maintainer email="tiago-support@pal-robotics.com">TIAGo support team</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>pal_gripper_description</run_depend>
  <run_depend>pal_gripper_controller_configuration</run_depend>

</package>
