<?xml version="1.0"?>
<package>
  <name>pal_gripper_controller_configuration</name>
  <version>1.0.0</version>
  <description>The pal_gripper_controller_configuration package</description>

  <author email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</author>
  <maintainer email="tiago-support@pal-robotics.com">TIAGo support team</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>

</package>
