<?xml version="1.0"?>
<package>
  <name>pal_gripper_controller_configuration_gazebo</name>
  <version>1.0.0</version>
  <description>Controllers configuration for PAL gripper in Gazebo</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend></package>
